addng parking spot logs module
